<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/btnCarro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/btnCarro"
        android:src="@drawable/ic_car" />

    <ImageButton
        android:id="@+id/btnControle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/btnControle"
        android:src="@drawable/ic_game_pad" />

    <ImageButton
        android:id="@+id/btnPropriedades"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/brnPropriedades"
        android:src="@drawable/ic_propertie" />

</LinearLayout>