<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="horizontal"
    android:background="@drawable/blackbackground"
    tools:context="br.usjt.aepn2012.cardroiduino.ui.Login"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/singleplayerbutton"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_alignBaseline="@+id/multiplayerbutton"
        android:layout_alignBottom="@+id/multiplayerbutton"
        android:layout_marginLeft="50dp"
        android:text="@string/singlemode"
        android:onClick="gotoCarDroidDuinoActivity"/>

    <Button
        android:id="@+id/multiplayerbutton"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/multimode" />

    <Button
        android:id="@+id/btnfinishline"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:onClick="gotofinishline"
        android:text="@string/finishline" />

</RelativeLayout>

